--- a/docs/1.Hello_Window.md
+++ b/docs/1.Hello_Window.md
@@ -46,7 +46,7 @@ if(window == NULL)
 glfwMakeContextCurrent(window);
 ```
 
-- GlAD manages function pointers for OpenGL so initialize it first before calling any OpenGL function.
+- GLAD manages function pointers for OpenGL so initialize it first before calling any OpenGL function.
 - We pass GLAD the function to load the address of the OpenGL function pointers (These are OS Specific).
 - GLFW gives us `glfwGetProcAddress` that defines the correct function based on which OS we are compiling for.
 
@@ -61,7 +61,7 @@ if(!gladLoadGLLoader((GLADloadproc)glfwGetProcAddress))
 - Now tell OpenGL the size of the render window.
 
 ```c++
-glViewport(0, 0 // Location of the lower left corner of the window
+glViewport(0, 0, // Location of the lower left corner of the window
         800, 600 // Width x Height (In pixels)
         );
 ```
