Revised Hello Rectangle

--- a/docs/2.Hello_Triangle.md
+++ b/docs/2.Hello_Triangle.md
@@ -233,3 +233,80 @@ Each vertex attribute takes its data from memory managed by a VBO and which VBO 
     glDrawArrays(GL_TRIANGLES, 0, 3);
     ```
 - The first parameter is the OpenGL primitive type we would like to draw. The second is the starting index of the vertex array we would like to draw. The last argument specifies how many vertives we want to draw.
+
+
+## Element Buffer Objects
+- Suppose we want to draw a rectangle usng two triangles, we would use the following set of vertices:
+    ```c++
+    float vertices[] = {
+        // first triangle
+        0.5f, 0.5f, 0.0f, // top right
+        0.5f, -0.5f, 0.0f, // bottom right
+        -0.5f, 0.5f, 0.0f, // top left
+        // second triangle
+        0.5f, -0.5f,  0.0f, // bottom right
+        -0.5f, -0.5f, 0.0f, // bottom left
+        -0.5f, 0.5f, 0.0f // top left
+    };
+    ```
+- As you can see, we specify **bottom right** and **top left** twice. This is an overhead of 50%.
+- EBOs stores indices that OpenGL uses to decide what vertices to draw. This is called **indexed drawing**
+    ```c++
+    float vertices[] = {
+        0.5f, 0.5f, 0.0f, // top right
+        0.5f, -0.5f, 0.0f, // bottom right
+        -0.5f, 0.5f, 0.0f, // bottom left
+        -0.5f, 0.5f, 0.0f // top left
+    };
+    unsigned int inidices[] = {
+        // note that we start from 0
+        0, 1, 3, // first triangle
+        1, 2, 3 // second triangle
+    };
+    ```
+- Next, we need to create the EBO:
+    ```c++
+    unsigned int EBO;
+    glGenBuffers(1, &EBO);
+    ```
+- We then bind to it and copy the indices into the buffer:
+    ```c++
+    glBindBuffer(GL_ELEMENT_ARRAY_BUFFER, EBO);
+    glBufferData(GL_ELEMENT_ARRAY_BUFFER, sizeof(indices), indices, GL_STATIC_DRAW);
+    ```
+- To draw, use `glDrawElements` which is going to draw using indices provided in the currently bound EBO:
+    ```c++
+    glBindBuffer(GL_ELEMENT_ARRAY_BUFFER, EBO);
+    glDrawElements(GL_TRIANGLES, 6, GL_UNSIGNED_INT, 0);
+    ```
+- The 1st argument specifies the mode we want to draw in.
+- The 2nd argument is the count/number of elements we'd like to draw.
+- The 3rd is the type of the indices.
+- The 4th allows us to specify an offset in the EBO (or pass in an index array, but that is when you are not using an EBO).
+- EBOs have to be bound when you want to draw from them. VAOs can also keep track of EBO bindings.
+    ```c++
+    // 1. bind the VAO
+    glBindVertexArray(VAO);
+    // 2. copy our vertices array in a VBO
+    glBindBuffer(GL_ARRAY_BUFFER, VBO);
+    glBufferData(GL_ARRAY_BUFFER, sizeof(vertices), vertices, GL_STATIC_DRAW);
+    // 3. copy our index array in a EBO
+    glBindBuffer(GL_ELEMENT_ARRAY_BUFFER, EBO);
+    glBufferData(GL_ELEMENT_ARRAY_BUFFER, sizeof(indices), indices, GL_STATIC_DRAW);
+    // 4. set the VAOs
+    glVertexAttribPointer(0, 3, GL_FLOAT, GL_FALSE, 3 * sizeof(float), (void*)0);
+    glEnableVertexAttribArray(0);
+    // [...]
+    // In render loop
+    glUseProgram(shaderProgram);
+    glBindVertexArray(VAO);
+    glDrawElements(GL_TRIANGLES, 6, GL_UNSIGNED_INT, 0);
+    glBindVertexArray(0);
+    ```
+- To show in **wireframe**, configure using `glPolygonMode(GL_FRONT_AND_BACK, GL_LINE)`. The first argument says we want to apply it to the front and back of all triangles and the second line tells us to draw them as line.
+- To set it back to default use `glPolygonMode(GL_FRONT_AND_BACK, GL_FILL)`
+
+## Exercises
+1. Draw 2 triangles using `glDrawArrays` by adding more vertices to your data
+2. Create the same two triangles using two different VAOs and VBOs for their data.
+3. Create 2 shader programs where the second program uses a different fragment shader that outputs the color yellow; draw both triangles again where one outputs the color yellow.
