--- a/docs/3.Shaders.md
+++ b/docs/3.Shaders.md
@@ -1,5 +1,5 @@
-#Shaders
-##GLSL
+# Shaders
+## GLSL
 - Shaders always begin with a version declaration, followed by a list of input and output variables, uniforms and its main function(the entry point)
 - A shader typically has the following structure
 ```c++
@@ -28,7 +28,7 @@ glGetIntegerv(GL_MAX_VERTEX_ATTRIBS, &nrAttributes);
 std::cout << "Maximum nr of vertex attributes supported: " << nrAttributes << std::endl;
 ```
 
-###Types
+### Types
 GLSL has these types among others:
 1. int
 2. float
@@ -40,7 +40,7 @@ GLSL also features two container types:
 1. vectors
 2. matrices
 
-####Vectors
+#### Vectors
 A vector in GLSL is a 1, 2, 3, or 4 component container for any of the basic types mentioned above. They can take the following form ( **n** being the number of components):
 1. **vecn**: the default vector of n floats.
 2. **bvecn**: a vector of n booleans.
@@ -65,177 +65,301 @@ vec4 result = vec4(vect, 0.0, 0.0);
 vec4 otherResult = vec4(result.xyz, 1.0);
 ```
 
-###Ins and outs
+### Ins and outs
 - GLSL defined the `in` and `out` keywords specifically for moving data in and out of shaders.
 - The vertex shader should receive some form of input otherwise it would be pretty ineffective. The vertex shader differs in its input, in that it receives its input straight from the vertex data.
 - To define how the vertex data is organized, we specify the input variables with location metadata so we can configure the vertex attributes on the CPU (`layout (location = 0`).
-- The vertex shader thus requires an extra layout specification for its inputs so we can link it with the vertex data.  
-**Note**
-- It is also possible to omit the `layout (location = 0)` specifier and query for the attribute llocations in your OpenGl code via `glGetAttribLocation`, but setting them in the vertex shader makes it easier to understand and saves you (and OpenGL) some work.  
-**End Note**
-
-- The other exception is that the fragment shader requires a **vec4** color output variable so to generate a final output color. Failure to specify an output color in the fragment shader will result in OpenGL rendering your object black(or white).  
-  
+- The vertex shader thus requires an extra layout specification for its inputs so we can link it with the vertex data.
+    - **Note**
+    - It is also possible to omit the `layout (location = 0)` specifier and query for the attribute locations in your OpenGl code via `glGetAttribLocation`, but setting them in the vertex shader makes it easier to understand and saves you (and OpenGL) some work.
+    - **End Note**
+- The other exception is that the fragment shader requires a **vec4** color output variable so to generate a final output color. Failure to specify an output color in the fragment shader will result in OpenGL rendering your object black(or white).
 - To send data from one shader to the next in the pipeline, we'd have to declare an output variable in the sending shader and a similar input in the receiving shader.
 - When the types and the names are equal on both sides, OpenGL will link those variables together and then it is possible to send data between shaders (this is done when linking a program object
-For example:  
-**Vertex Shader**
-```c++
-#version 330 core
-layout (location = 0) in vec3 aPos; // The position variable has attribute position 0
+For example
+    - **Vertex Shader**
+        ```c++
+        #version 330 core
+        layout (location = 0) in vec3 aPos; // The position variable has attribute position 0
 
-out vec4 vertexColor; // Specify a color output to the fragment shader
+        out vec4 vertexColor; // Specify a color output to the fragment shader
 
-void main()
-{
-    gl_Position = vec4(aPos, 1.0); // See how we directly give a vec3 to vec4's constructor
-    vertexColor = vec4(0.5, 0.0, 0.0, 1.0); // Set the output variable to a dark-red color
-}
-```
-  
-**Fragment Shader**
-```c++
-#version 330 core
-out vec4 FragColor;
+        void main()
+        {
+            gl_Position = vec4(aPos, 1.0); // See how we directly give a vec3 to vec4's constructor
+            vertexColor = vec4(0.5, 0.0, 0.0, 1.0); // Set the output variable to a dark-red color
+        }
+        ```
+    - **Fragment Shader**
+        ```c++
+        #version 330 core
+        out vec4 FragColor;
 
-in vec4 vertexColor; // The input variable from the vertex shader (same name and same type)
+        in vec4 vertexColor; // The input variable from the vertex shader (same name and same type)
 
-void main()
-{
-    FragColor = vertexColor;
-}
-```
+        void main()
+        {
+            FragColor = vertexColor;
+        }
+        ```
 
-###Uniforms
+### Uniforms
 - These are another way to pass data from our application on the CPU to the shaders on the GPU, but uniforms are slightly different compared to vertex attributes.
 - First of all, uniforms are **global** in that a uniform variable is unique per shader program object, and can be accessed from any shader at any stage in the shader program.
 - Second, whatever you set the uniform value to, uniforms will keep their values until they're either reset or updated.
 - To declare a uniform in GLSL we simply ad the **uniform** keyword to a shader with a type and a name:
-```c++
-#version 330 core
-out vec4 FragColor
+    ```c++
+    #version 330 core
+    out vec4 FragColor
 
-uniform vec4 ourColor; // We set this variable in the OpenGL code.
+    uniform vec4 ourColor; // We set this variable in the OpenGL code.
 
-void main()
-{
-    FragColor = ourColor;
-}
-```
-  
-- Since uniforms are global variables, we can define them in any shader we'd like so ni need to go through the vertex shader again to get something to the fragment shader.
+    void main()
+    {
+        FragColor = ourColor;
+    }
+    ```
+- Since uniforms are global variables, we can define them in any shader we'd like so no need to go through the vertex shader again to get something to the fragment shader.
 - We are not using this uniform in the vertex shader so there's no need to define it there.
-  
-**Note**
-- If you declare a uniform that isn't used anywhere in your GLSL code, the compiler will silently remove the variable from the compiled version.  
-**End Note**
-  
+    - **Note**
+    - If you declare a uniform that isn't used anywhere in your GLSL code, the compiler will silently remove the variable from the compiled version.  
+    - **End Note**
 - To add data to the uniform, we first need to find the index/location of the uniform.
 - Lets us use the uniform to change the color over time:
-```c++
-float timeValue = glfwGetTime();
-float greenValue = (sin(timmeValue) / 2.0f) + 0.5f;
-int vertexColorLocation = glGetUniformLocation(shaderProgram, "ourColor");
-glUseProgram(shaderProgram);
-glUniform4f(vertexColorLocation, 0.0f, greenValue, 0.0f, 1.0f);
-```
+    ```c++
+    float timeValue = glfwGetTime();
+    float greenValue = (sin(timeValue) / 2.0f) + 0.5f;
+    int vertexColorLocation = glGetUniformLocation(shaderProgram, "ourColor");
+    glUseProgram(shaderProgram);
+    glUniform4f(vertexColorLocation, 0.0f, greenValue, 0.0f, 1.0f);
+    ```
 - First, we retrieve the running time in seconds via `glfwGetTime()`. Then we vary the color in the range of 0.0 - 1.0 by using the `sin` function and store the result in `greenValue`.
 - We then query for the location of the `ourColor` uniform(that we want to retreive the location from) to the query function.
 - If `glGetUniformLocation` returns -1, it could not find the location.
 - Lastly, we can set the uniform value using the `glUniform4f` function.
 - Not that finding the uniform location does not require you to use the shader program first, but updating a uniform **does require** you to first use the program, because it sets the uniform on the currently active shader program.
-  
-**Note**
-Since OpenGL is in its core a C library, it does not have native support for type overloading, so wherever a function can be called with different types, OpenGL defines new function for each type required; `glUnifrom` is an example of this. The function requires a postfix for the type of the uniform you want to set. A few of the possible postfixes are
-- `f`: the function expects a `float` as its value.
-- `i`: the function expects an `int` as its value.
-- `ui`: the function expects an `unsigned int` as its value.
-- `3f`: the function expects 3 `floats` as its value.
-- `fv`: the function expects a `float` vector/array as its value.
-  
-Whenever you want to conigure an option of OpenGL simply pick the overloaded function that corresponds with your type.In our case, we want to set 4 floats of the uniform individually so we pass our data via `glUniform4f`. (note that we also could've used the fv version.  
-**End Note**  
-  
-We update this uniform every game loop iteration so that the color changes per-frame.
-```c++
-while(!glfwWindowShouldClose(window))
-{
-    // Input
-    processInput(window);
+    - **Note**
+    - Since OpenGL is in its core a C library, it does not have native support for type overloading, so wherever a function can be called with different types, OpenGL defines new function for each type required; `glUnifrom` is an example of this. The function requires a postfix for the type of the uniform you want to set. A few of the possible postfixes are
+        - `f`: the function expects a `float` as its value.
+        - `i`: the function expects an `int` as its value.
+        - `ui`: the function expects an `unsigned int` as its value.
+        - `3f`: the function expects 3 `floats` as its value.
+        - `fv`: the function expects a `float` vector/array as its value.
+    - Whenever you want to conigure an option of OpenGL simply pick the overloaded function that corresponds with your type.In our case, we want to set 4 floats of the uniform individually so we pass our data via `glUniform4f`. (note that we also could've used the fv version.
+    - **End Note**
+- We update this uniform every game loop iteration so that the color changes per-frame.
+    ```c++
+    while(!glfwWindowShouldClose(window))
+    {
+        // Input
+        processInput(window);
 
-    // Render
-    // 1. Clear the buffer
-    glClearColor(0.2f, 0.3f, 0.3f, 1.0f);
-    glClear(GL_COLOR_BUFFER_BIT);
+        // Render
+        // 1. Clear the buffer
+        glClearColor(0.2f, 0.3f, 0.3f, 1.0f);
+        glClear(GL_COLOR_BUFFER_BIT);
 
-    // 2. Be sure to activate the shader
-    glUseProgram(shaderProgram);
+        // 2. Be sure to activate the shader
+        glUseProgram(shaderProgram);
 
-    // Update the uniform color
-    float timeValue = glfwGetTime();
-    float greenValue = sin(timeValue) / 2.0f + 0.5f;
-    int vertexColorLocation = glGetUniformLocation(shaderProgram, "ourColor");
-    glUniform4f(vertexColorLocation, 0.0f, greenValue, 0.0f, 1.0f);
+        // Update the uniform color
+        float timeValue = glfwGetTime();
+        float greenValue = sin(timeValue) / 2.0f + 0.5f;
+        int vertexColorLocation = glGetUniformLocation(shaderProgram, "ourColor");
+        glUniform4f(vertexColorLocation, 0.0f, greenValue, 0.0f, 1.0f);
 
-    // 3. Now render the triangle
-    glBindVertexArray(VAO);
-    glDrawArrays(GL_TRIANGLES, 0, 3);
+        // 3. Now render the triangle
+        glBindVertexArray(VAO);
+        glDrawArrays(GL_TRIANGLES, 0, 3);
 
-    // Swap the buffers and poll IO events
-    glfwSwapBuffers(window);
-    glfwPollEvents();
-}
-```
-
-- Uniforms are useful but when we want change the color of each vertex, we'd have to declare as many unifroms as we have vertices.
+        // Swap the buffers and poll IO events
+        glfwSwapBuffers(window);
+        glfwPollEvents();
+    }
+    ```
+- Uniforms are useful for setting attributes that might change in each render iteration but when we want to change the color of each vertex, we'd have to declare as many unifroms as we have vertices.
 - A better solution would be to include more data in the vertex attributes.
 
 ### More Attributes
 - Let us add color data to the vertex data.
-```c++
-float vertices[] = {
-    // positions	// colors
-    0.5f, -0.5f, 0.0f,	1.0f, 0.0f, 0.0f,   // Bottom right
-    -0.5f, -0.5f, 0.0f, 0.0f, 1.0f, 0.0f,   // Bottom left
-    0.0f, 0.5f, 0.0f,	0.0f, 0.0f, 1.0f,   // Top
-};
-```
+    ```c++
+    float vertices[] = {
+        // positions	// colors
+        0.5f, -0.5f, 0.0f,	1.0f, 0.0f, 0.0f,   // Bottom right
+        -0.5f, -0.5f, 0.0f, 0.0f, 1.0f, 0.0f,   // Bottom left
+        0.0f, 0.5f, 0.0f,	0.0f, 0.0f, 1.0f,   // Top
+    };
+    ```
 - Lets know adjust the vertex shader to also receive our color value as a vertex attribute input.
 - Note that we set the location of the `aColor` attribute to 1 with the layout specifier:
-```c++
-#version 330 core
-layout (location = 0) in vec3 aPos;	// The position variable has attribute position 0
-layout (location = 1) in vec3 aColor	// The color variable has attribute position 1
+    ```c++
+    #version 330 core
+    layout (location = 0) in vec3 aPos;	// The position variable has attribute position 0
+    layout (location = 1) in vec3 aColor	// The color variable has attribute position 1
 
-out vec3 ourColor; // Output a color to the fragment shader
+    out vec3 ourColor; // Output a color to the fragment shader
 
-void main()
-{
-    gl_Position = vec4(aPos, 1.0);
-    ourColor = aColor; // Set ourColor to the inout color we got from the vertex data
-}
-```
-
+    void main()
+    {
+        gl_Position = vec4(aPos, 1.0);
+        ourColor = aColor; // Set ourColor to the inout color we got from the vertex data
+    }
+    ```
 - Let us now update the fragment shader accordingly
-```c++
-#version 330 core
-out vec4 FragColor;
-in vec3 ourColor;
+    ```c++
+    #version 330 core
+    out vec4 FragColor;
+    in vec3 ourColor;
 
-void main()
-{
-    FragColor = vec4(ourColor, 1.0);
-}
-```
-
+    void main()
+    {
+        FragColor = vec4(ourColor, 1.0);
+    }
+    ```
 - Now we re-configure the vertex attribute pointers
-```c++
-// position attribute
-glVertexAttribPointer(0, 3, GL_FLOAT, GL_FALSE, 6 * sizeof(float), (void*)0);
-glEnableVertexAttribArray(0);
-// Color attribute
-glVertexAttribPointer(1, 3, GL_FLOAT, GL_FALSE, 6 * sizeof(float), (void*)(3 * sizeof(float));
-glEnableVertexAttribArray(1);
-```
+    ```c++
+    // position attribute
+    glVertexAttribPointer(0, 3, GL_FLOAT, GL_FALSE, 6 * sizeof(float), (void*)0);
+    glEnableVertexAttribArray(0);
+    // Color attribute
+    glVertexAttribPointer(1, 3, GL_FLOAT, GL_FALSE, 6 * sizeof(float), (void*)(3 * sizeof(float));
+    glEnableVertexAttribArray(1);
+    ```
 
 - The **stride** is now 6 floats, and the offset for the color data is 3 floats.
+
+## Portable Shader Class
+- Let's start by adding the required includes and by defining the class structure:
+    ```c++
+    #ifndef SHADER_H
+    #define SHADER_H
+
+    #include <glad/glad.h> // Include this to get all the required OpenGL headers
+
+    #include <string>
+    #include <fstream>
+    #include <sstream>
+    #include <iostream>
+
+    class Shader {
+    public:
+        // the program ID
+        unsigned int Program;
+
+        // constructor reads and builds the shader
+        Shader(const GLchar* vertexPath, const GLchar* fragmentPath);
+        // use/activate the shader
+        void use();
+        // utility uniform functions
+        void setBool(const std::string &name, bool value) const;
+        void setInt(const std::string &name, int value) const;
+        void setFloat(const std::string &name, float value) const;
+    };
+
+    #endif
+    ```
+### Reading from a file
+- We are using C++ filestreams to read the content from the file into several `string` objects:
+    ```c++
+    Shader(const char* vertexPath) {
+        // 1. retrieve the vertex/fragment source code from filePath
+        std::string vertexCode;
+        std::string fragmentCode;
+        std::ifstream vShaderFile;
+        std::ifstream fShaderFile;
+        // ensure ifstream objects can throw exceptions
+        vShaderFile.exceptions (std::ifstream::failbit | std::ifstream::badbit);
+        fShaderFile.exceptions (std::ifstream::failbit | std::ifstream::badbit);
+
+        try {
+            // open files
+            vShaderFile.open(vertexPath);
+            fShaderFile.open(fragmentPath);
+            std::stringstream vShaderStream, fShaderStream;
+            // read file's buffer contents into streams
+            vShaderStream << vShaderFile.rdbuf();
+            fShaderStream << fShaderFile.rdbuf();
+            // close file handlers
+            vShaderFile.close();
+            fShaderFile.close();
+            // convert stream into string
+            vertexCode = vShaderStream.str();
+            fragmentCode = fShaderStream.str();
+        }
+        catch(std::ifstream::failure e) {
+            std::cout << "ERROR::SHADER::FILE_NOT_SUCCESFULLY_READ" << std::endl;
+        }
+        const char* vShaderCode = vertexCode.c_str();
+        const char* fShaderCode = fragmentCode.c_str();
+        // [...]
+    ```
+- Now compile and link the shaders
+    ```c++
+        // 2. compile the shaders
+        unsigned int vertex, fragment;
+        int success;
+        char infoLog[512];
+
+        // vertex shader
+        vertex = glCreateShader(GL_VERTEX_SHADER);
+        glShaderSource(vertex, 1, &vShaderCode, NULL);
+        glCompileShader(vertex)
+        // print compile errors if any
+        glGetShaderiv(vertex, GL_COMPILE_STATUS, &success);
+        if (!success) {
+            glGetShaderInfoLog(vertex, 512, NULL, infoLog);
+            std::cout << "ERROR::SHADER::VERTEX::COMPILATION_FAILED\n\t" << infoLog << std::endl;
+        }
+
+        // similar for fragment shader
+        [...]
+
+        // shader program
+        this->Program = glCreateProgram();
+        glAttachShader(this->Program, vertex);
+        glAttachShader(this->Program, fragment);
+        glLinkProgram(this->Program);
+        // print linking errors if any
+        glGetProgramiv(this->Program, GL_LINK_STATUS, &success);
+        if (!success) {
+            glGetProgramInfoLog(this->Program, 512, NULL, infoLog);
+            std::cout << "ERROR::SHADER::PROGRAM::LINKING_FAILED\n\t" << infoLog << std::endl;
+        }
+
+        // delete these two as they're linked and no longer needed
+        glDeleteShader(vertex);
+        glDeleteShader(fragment);
+    ```
+- The use function is simple:
+    ```c++
+    void use() {
+        glUseProgram(Program);
+    }
+    ```
+- As are the uniform setter functions:
+    ```c++
+    void setBool(const std::string &name, bool value) const {
+        glUniform1i(glGetUniformLocation(Program, name.c_str()), (int)value);
+    }
+    void setInt(const std::string &name, int value) const {
+        glUniform1i(glGetUniformLocation(Program, name.c_str()), value);
+    }
+    void setFloat(const std::string &name, float value) const {
+        glUniform1i(glGetUniformLocation(Program, name.c_str()), value);
+    }
+    ```
+- To use it:
+    ```c++
+    Shader ourShader("path/to/shaders/shader.vs", "path/to/shaders/shader.fs");
+    // ...
+    while(...) {
+        ourShader.use();
+        ourShader.setFloat("someUniform", 1.0f);
+        DrawStuff();
+    }
+    ```
+
+## Exercises
+- Adjust the vertex shader so that the triangle is upside down.
+- Specify a horizontal offset via a uniform and move the triangle to the right side of the screen in the vertex shader using this offset value.
+- Output the vertex position to the fragment shader using the `out` keyword and set the fragment's color equal to this vetex position. Then answer this question, why is the bottom-left side of our triangle black.
