Revised 3.2 Colourful Triangle

--- a/docs/3.Shaders.md
+++ b/docs/3.Shaders.md
@@ -187,7 +187,7 @@ For example
         // positions	// colors
         0.5f, -0.5f, 0.0f,	1.0f, 0.0f, 0.0f,   // Bottom right
         -0.5f, -0.5f, 0.0f, 0.0f, 1.0f, 0.0f,   // Bottom left
-        0.0f, 0.5f, 0.0f,	0.0f, 0.0f, 1.0f,   // Top
+        0.0f, 0.5f, 0.0f,	0.0f, 0.0f, 1.0f   // Top
     };
     ```
 - Lets know adjust the vertex shader to also receive our color value as a vertex attribute input.
@@ -195,7 +195,7 @@ For example
     ```c++
     #version 330 core
     layout (location = 0) in vec3 aPos;	// The position variable has attribute position 0
-    layout (location = 1) in vec3 aColor	// The color variable has attribute position 1
+    layout (location = 1) in vec3 aColor;	// The color variable has attribute position 1
 
     out vec3 ourColor; // Output a color to the fragment shader
 
