Did 3.3 Exercise Qn1

--- a/docs/3.Shaders.md
+++ b/docs/3.Shaders.md
@@ -261,7 +261,7 @@ For example
 ### Reading from a file
 - We are using C++ filestreams to read the content from the file into several `string` objects:
     ```c++
-    Shader(const char* vertexPath) {
+    Shader(const GLchar* vertexPath, const GLchar* fragmentPath) {
         // 1. retrieve the vertex/fragment source code from filePath
         std::string vertexCode;
         std::string fragmentCode;
@@ -345,7 +345,7 @@ For example
         glUniform1i(glGetUniformLocation(Program, name.c_str()), value);
     }
     void setFloat(const std::string &name, float value) const {
-        glUniform1i(glGetUniformLocation(Program, name.c_str()), value);
+        glUniform1f(glGetUniformLocation(Program, name.c_str()), value);
     }
     ```
 - To use it:
