Loading two textures

--- a/docs/4.Textures.md
+++ b/docs/4.Textures.md
@@ -218,7 +218,7 @@
 ------------------------------------------------------------------------------------------------
 ###### Note
 - OpenGL should have a minimum of 16 texture units for use which you can activate using `GL_TEXTURE0` to `GL_TEXTURE15`. 
-- They are defined in order so we could get `GL_TEXTURE8` via `GL_TEXTURE0 + 8`, which is usefule when looping.
+- They are defined in order so we could get `GL_TEXTURE8` via `GL_TEXTURE0 + 8`, which is useful when looping.
 ------------------------------------------------------------------------------------------------
 - We still have to edit the fragment shader to accept another sampler:
     ```c++
@@ -256,7 +256,6 @@
 - Enjoy the render:
 
 ## Exercises:
-- Make sure **only** the happy face loolks in the other/rev
 - Make sure only the happy face looks in the other/reverse direction by changing the fragment shader.
 - Experiment with the different texture wrapping methods by specifying texture coordinates in the range 0.0f to 2.0f instead of 0.0f to 1.0f. See if you can display 4 smiley faces on a single container image clamped at its edge: solution, result. See if you can experiment with other wrapping methods as well.
 - Try to display only the center pixels of the texture image on the rectangle in such a way that the individual pixels are getting visible by changing the texture coordinates. Try to set the texture filtering method to `GL_NEAREST` to see the pixels more clearly.
