Added Rotated Container example

--- a/docs/5.Transformations.md
+++ b/docs/5.Transformations.md
@@ -43,11 +43,11 @@
         TexCoord = vec2(aTexCoord.x, 1.0 -aTexCoord.y);
     }
     ```
-- GLSL also has `mat2` and `mat3` types that allow for `swizzling` like operations just like ectors.
+- GLSL also has `mat2` and `mat3` types that allow for `swizzling` like operations just like vectors.
 - To pass the transformation matrix:
     ```c++
-    unsigned in transformLoc = glGetUniformLocation(ourShader.programID, "transform");
-    glGetUniformMatrix4fv(transformLoc, 1, GL_FALSE, glm::value_ptr(trans));
+    unsigned int transformLoc = glGetUniformLocation(ourShader.programID, "transform");
+    glUniformMatrix4fv(transformLoc, 1, GL_FALSE, glm::value_ptr(trans));
     ```
 - The first argument is the uniform's location.
 - The 2nd tells OpenGL how many matrices we'd like to send, which is 1.
