Did a rotated rectangle

--- a/docs/5.Transformations.md
+++ b/docs/5.Transformations.md
@@ -11,7 +11,7 @@
     ```c++
     glm::vec4 vec(1.0f, 0.0f, 0.0f, 1.0f);
     // Define the transformation matrix by passing our identity matrix
-    glm::mat4 trans;
+    glm::mat4 trans = glm::mat4(1);
     // the given matrix is multiplied with a translation matrix and the resulting
     // matrix is returned
     trans = glm::translate(trans, glm::vec3(1.0f, 1.0f, 0.0f));
@@ -23,8 +23,8 @@
 - We could also rotate and scale the container from the previous tutorial
     ```c++
     glm::mat4 trans;
-    trans = glm::rotate(trans, glm::radians(90.0f), glm::vec3(0.0, 0.0, 1.0));
-    trans = glm::scale(trans, glm::vec3(0.5, 0.5, 0.5));
+    trans = glm::rotate(trans, glm::radians(90.0f), glm::vec3(0.0f, 0.0f, 1.0f));
+    trans = glm::scale(trans, glm::vec3(0.5f, 0.5f, 0.5f));
     ```
 - We first scale the container by `0.5` on each axis then rotate the container 90 degrees around the Z axis. GLM expects its angles in radians thus we convert degrees to radians.
 - Because we pass the matrix to each of GLM's functions, GLM automatically multiplies the matrices together resulting in a transformation matrix that combines all the transformations.
@@ -40,7 +40,7 @@
 
     void main() {
         gl_Position = transform * vec4(aPos, 1.0f);
-        TexCoord = vec2(aTexCoord.x, 1.0 -aTexCoord.y);
+        TexCoord = vec2(aTexCoord.x, 1.0f -aTexCoord.y);
     }
     ```
 - GLSL also has `mat2` and `mat3` types that allow for `swizzling` like operations just like vectors.
