Added preprocessor to fix windows compile issues

--- a/docs/6.Coordinate_Systems.md
+++ b/docs/6.Coordinate_Systems.md
@@ -17,7 +17,7 @@
     1. Local coordinates are the coordinates of your object relative to its local origin; they're the coordinates your object begins in.
     2. The next step is to transform the local coordinates to world-space coordinates which are coordinates in respect of a larger world. These coordinates are relative to a global origin of the world, together with many other objects also placed relative to the world's origin .
     3. The world coordinates are then transformed to view-space coordinates is as seen from the camera or viewer's point of view.
-    4. We now want ot project them to clip coordinates. Clip coordinates are processed to the -1.0 and 1.0 range and determine which vertices will end up on the screen.
+    4. We now want to project them to clip coordinates. Clip coordinates are processed to the -1.0 and 1.0 range and determine which vertices will end up on the screen.
     5. Lastly, we transform the clip coordinates to screen coordinates in a process called **viewport transform** that transforms the coordinates from the -1.0 and 1.0 to the coordinate range defined by `glViewport`.
     6. The resulting coordinates are then sent to the rasterizer to turn them into fragments.
 
@@ -49,7 +49,7 @@
 
 - This **viewing box** a projection matrix creates is called a **frustrum** and each coordinate that ends up inside this frustrum will end up on the user's screen.
 - The total process to convert coordinates within a specified range to NDC that can be easily mapped to 2D view-space is called **projection** since the projection matrix projects 3D coordinates to the easy-to-map-to-2D NDCs.
-- Once all the vertices are transformed to clip space, a final operation called **perspective division** is performed where whe divide the x, y, and z components of the position vectors by the cector's homogeneous `w` component; perspective division is what transforms the 4D clip space coordinates to 3D NDCs. This is performed automatically at the end of each vertex shader run.
+- Once all the vertices are transformed to clip space, a final operation called **perspective division** is performed where whe divide the x, y, and z components of the position vectors by the vector's homogeneous `w` component; perspective division is what transforms the 4D clip space coordinates to 3D NDCs. This is performed automatically at the end of each vertex shader run.
 - The resulting coordinates are mapped to screen coordinates using the settings of `glViewport` and turned into fragments
 - A projection matrix to transform view coordinates to clip coordinates could be a **orthographic** or a **perspective** projection matrix.
 
@@ -65,7 +65,7 @@
     ```c++
     glm::ortho(0.0f, 800.0f, 0.0f, 600.0f, 0.1f, 100.0f);
     ```
-- The first two parameters are teh left and right coordinate of the frustrum and the third and fourth specify the bottom and top part of the frustrum. With these 4 point we've defined the size of the near and far planes.
+- The first two parameters are the left and right coordinate of the frustrum and the third and fourth specify the bottom and top part of the frustrum. With these 4 point we've defined the size of the near and far planes.
 - The 5th and 6th define the distances between the near and far plane.
 
 ## Perspective projection
