Made the docs an mdbook

--- a/docs/src/4.textures.md
+++ b/docs/src/4.textures.md
@@ -1,4 +1,4 @@
-## Textures
+# Textures
 - To map a texture to the triangle, we need to tell each vertex of the triangle which part of the texture it corresponds to.
 - Each vertex should thus have a **texture coordinate** associated with them that specifies what part of the texture image to sample from.
 - Texture coordinates range from 0 to 1 in the x and y axis. Retrieving the texture color using texture coordinates is called **sampling**.
