--- a/docs/src/6.coordinate_systems.md
+++ b/docs/src/6.coordinate_systems.md
@@ -42,10 +42,11 @@
 - We use a **projection matrix** that specifies a range of coordinates e.g. -1000 to 1000 in each dimension.
 - The projection matrix then transforms coordinates within this specified range to NDCs (-1.0, 1.0).
 - All coordinates outside the projection matrice's range wont be mapped to NDC and thus would be clipped, e.g. (1250, 500, 750) would not be visible if we used the above mentioned limits, since the x coordinate is out of range and thus gets converted to a coordinate higher than 1.0 in NDX.
---------------------------------------------------------------------------------------------
-###### Note
-- If only a part of a primitive e.g. a triangle is outside the **clipping volume**, OpenGL will reconstruct the triangle as one or more trangles to fit inside the clipping range.
---------------------------------------------------------------------------------------------
+    ```markdown
+    If only a part of a primitive e.g. a triangle is outside the **clipping volume**, 
+    OpenGL will reconstruct the triangle as one or more trangles to fit inside the 
+    clipping range.
+    ```
 
 - This **viewing box** a projection matrix creates is called a **frustrum** and each coordinate that ends up inside this frustrum will end up on the user's screen.
 - The total process to convert coordinates within a specified range to NDC that can be easily mapped to 2D view-space is called **projection** since the projection matrix projects 3D coordinates to the easy-to-map-to-2D NDCs.
@@ -71,7 +72,7 @@
 ## Perspective projection
 - The projection matrix maps a given frustrum range to clip space, but also manipulates the `w` value of each vertex coordinate in such a way that the further away a vertex coordinate is from the viewer, the higher this `w` component become. 
 - Once the coordinates are transformed to clip space they are in the range `-w` to `w`. Anything outside this range is clipped.
-- Once the coordinates are in clip space, perspective division is applied to the clip space coordinates:
+- Once the coordinates are in clip space, perspective division is applied to the clip space coordinates:  
     ![formula](images/perspective_projection_formula.png)
 - Each component of the vertex coordinate is divided by its `w` component giving smaller vertex coordinates the away a vertex is from the viewer.
 - The `w` component is thus important since it helps us with perspective projection.
@@ -85,10 +86,12 @@
 - The 1st parameter is the **fov** (field of view) value and sets how large the viewspace is. It is normally 45, but for more doom-style results you could set it to a higher value.
 - The 2nd parameter is the aspect ratio which is calculated by dividing the viewport's width by its height.
 - The 3rd and fourth set the *near* and *far* plane of the frustrum.
---------------------------------------------------------------------------------------
-###### Note
-- Whenever the near value of your perspective matrix is set a bit too high (like 10.0f), OpenGL will clip all coordinates close to the camera (between 0.0f and 10.0f), which gives a familiar visual result in videogames in that you can see through certain objects if you move too close to them.
---------------------------------------------------------------------------------------
+  ```markdown
+  Whenever the near value of your perspective matrix is set a bit too high 
+  (like 10.0f), OpenGL will clip all coordinates close to the camera 
+  (between 0.0f and 10.0f), which gives a familiar visual result in videogames 
+  in that you can see through certain objects if you move too close to them.
+  ```
 - Orthographic projection maps vertex coordinates directly to clip space without any fancy perpective fivision (it still does perspective division, but the `w` component is not manipulated (it stays 1) and thus has no effect).
 
 
@@ -272,7 +275,7 @@
         glDrawArrays(GL_TRIANGLES, 0, 36);
     }
     ```
-- **Enjoy the render**
+- *Enjoy the render*
 
 ## Exercises:
 - Try experimenting with the FoV and aspect-ratio parameters of GLM’s projection function. See if you can figure out how those affect the perspective frustum.
