Did the hello coordinates example

--- a/docs/src/6.coordinate_systems.md
+++ b/docs/src/6.coordinate_systems.md
@@ -4,7 +4,7 @@
 - Normally, we specify coordinates in a range we configure ourselves and in the vertex shader transform these coordinates to NDC. These NDC coordinates are then given to the rasterizer to transfom them to 2D coordinates/pixels on the screen
 - Transforming the coordinates to NDC and then to screen coordinates is usually accomplished in a step-by-step fashion where we translate an object's vertices to several coordinate systems before finally transforming them to screen coordinates.
 - The coordinate systems include:
-    1. Loval space (or Object space)
+    1. Global space (or Object space)
     2. World Space
     3. View space (or Eye space)
     4. Clip space
@@ -41,7 +41,7 @@
 - Since working within -1.0 and 1.0 isn't intuitive, we specify our own coordinate set to work in then transform them back to NDC when we are done.
 - We use a **projection matrix** that specifies a range of coordinates e.g. -1000 to 1000 in each dimension.
 - The projection matrix then transforms coordinates within this specified range to NDCs (-1.0, 1.0).
-- All coordinates outside the projection matrice's range wont be mapped to NDC and thus would be clipped, e.g. (1250, 500, 750) would not be visible if we used the above mentioned limits, since the x coordinate is out of range and thus gets converted to a coordinate higher than 1.0 in NDX.
+- All coordinates outside the projection matrix' range wont be mapped to NDC and thus would be clipped, e.g. (1250, 500, 750) would not be visible if we used the above mentioned limits, since the x coordinate is out of range and thus gets converted to a coordinate higher than 1.0 in NDX.
     ```markdown
     If only a part of a primitive e.g. a triangle is outside the **clipping volume**, 
     OpenGL will reconstruct the triangle as one or more trangles to fit inside the 
@@ -138,7 +138,7 @@
 - Define the projection matrix:
     ```c++
     glm::mat4 projection;
-    projection = glm::projection(glm::radians(45.0f), screenWidth / screnHeight, 0.1f, 100.0f);
+    projection = glm::perspective(glm::radians(45.0f), screenWidth / screnHeight, 0.1f, 100.0f);
     ```
 - Pass the transformation matrices to our shaders:
     ```c++
@@ -150,7 +150,7 @@
     uniform mat4 projection;
     void main() {
         // note that we read the multiplication from right to left
-        gl_Position = projection * view * model * vec4(aPos, 1.9);
+        gl_Position = projection * view * model * vec4(aPos, 1.0);
         ...
     }
     ```
