Did the many cubes example

--- a/docs/src/6.coordinate_systems.md
+++ b/docs/src/6.coordinate_systems.md
@@ -224,12 +224,12 @@
     ```
 - **Enjoy the render**
 - Some sides of the cubes are being drawn over other sides of the cube. This happens because when OpenGL draws your cube triangle-by-triangle, it will overwrite its pixels even though something else might've been drawn there before.
-- OpenGL stores depth information in a buffer called the `z-buffer` that allows OpenGL to decide when to draw ovver a pixel and when not to.
+- OpenGL stores depth information in a buffer called the `z-buffer` that allows OpenGL to decide when to draw over a pixel and when not to.
 - We can use it to configure OpenGL to do depth-testing.
 
 ### Z-buffer
 - OpenGL stores depth information in a z-buffer, a.k.a a `depth` buffer. GLFW automatically creates such a buffer.
-- The depth is stored within eacch fragment (as the fragment's `z` value) and whenever the fragment wants to output its color, OpenGL compares its depth values with the z-buffer and if the current fragment is behind the other fragment it is discarded, otherwise overwritten.
+- The depth is stored within each fragment (as the fragment's `z` value) and whenever the fragment wants to output its colour, OpenGL compares its depth values with the z-buffer and if the current fragment is behind the other fragment it is discarded, otherwise overwritten.
 - This is process is called **depth testing** and is done automatically by OpenGL.
 - However, if we want to make sure OpenGL actually performs the depth testing, we first need to tell OpenGL we want to enable depth testing; it is disabled by default. 
 - We can enable depth testing using `glEnable`. The `glEnable` and `glDisable` functions allow us to enable/disable certain functionality in OpenGL.
